ported most of the mod to 1.21